docs: add docs for GetUserByID and Getme
